--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,10 @@ services:
   - type: web
     name: utr-bot
     runtime: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install --upgrade pip
+      pip install -r requirements.txt
+      apt-get update && apt-get install -y tesseract-ocr
     startCommand: python bot.py
     envVars:
       - key: BOT_TOKEN
