--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,12 @@
 services:
   - type: web
     name: utr-bot
-    runtime: python
-    region: oregon
-    plan: free
+    env: python
     buildCommand: |
       apt-get update
       apt-get install -y tesseract-ocr
-      pip install --upgrade pip
       pip install -r requirements.txt
     startCommand: python bot.py
     envVars:
       - key: BOT_TOKEN
-        sync: false
+        value: "YOUR_BOT_TOKEN_HERE"
