--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     buildCommand: |
       apt-get update
       apt-get install -y tesseract-ocr
+      pip install --upgrade pip
       pip install -r requirements.txt
     startCommand: python bot.py
     envVars:
