--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,9 @@
 services:
   - type: web
     name: utr-bot
-    env: python
-    buildCommand: |
-      apt-get update
-      apt-get install -y tesseract-ocr
-      pip install --upgrade pip
-      pip install -r requirements.txt
-    startCommand: python bot.py
+    runtime: docker
+    repo: https://github.com/YOUR_USERNAME/YOUR_REPO
+    plan: free
     envVars:
       - key: BOT_TOKEN
-        value: "YOUR_BOT_TOKEN_HERE"
+        value: YOUR_BOT_TOKEN_HERE
