--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 python-telegram-bot==13.15
 pytesseract==0.3.8
-Pillow==8.4.0
-opencv-python-headless==4.5.5.64
-numpy==1.21.6
+Pillow
+opencv-python-headless
+numpy
