--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,7 @@ services:
   - type: web
     name: utr-bot
     runtime: docker
-    repo: https://github.com/YOUR_USERNAME/YOUR_REPO
     plan: free
     envVars:
       - key: BOT_TOKEN
-        value: YOUR_BOT_TOKEN_HERE
+        sync: false
