--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-python-telegram-bot==13.15
-pytesseract==0.3.10
-opencv-python-headless==4.8.1.78
-numpy==1.24.3
+python-telegram-bot==13.7
+pytesseract==0.3.8
+Pillow==9.2.0
